Fix title spacing in content

--- a/styles/elements/_content.scss
+++ b/styles/elements/_content.scss
@@ -11,7 +11,7 @@
     }
 
     h5 {
-        --block-spacing: 0;
+        --title-spacing: 0;
 
         font-family: var(--content-h5-font-family);
         font-size: var(--content-h5-font-size);
@@ -19,7 +19,7 @@
     }
 
     h6 {
-        --block-spacing: 0;
+        --title-spacing: 0;
 
         font-family: var(--content-h6-font-family);
         font-size: var(--content-h6-font-size);
